* Finished "Page" section * Added top_up to our server in our public * Improved top_up design (now show a super great border!) * Added notifier on page add/edit with diff * Updated Gemfile to use latest padrino 0.9.4 * Fixed boot to work with all bundler > 0.9.7 * Fixed a problem in Gemfile with mongo_ext and rubygems 1.3.6

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 = TODO
 
-* Pages functionality (for editing site content mini-cms)
+* Add docs into admin ex in /admin/views/base/index.haml and in all sidebar
 * Search functionality in guies section
 * Extensions directory like railsplugins.org and http://coderack.org
 * Screencast section
