--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
 = TODO
 
+* ScreenCast
+* Change/populate our key features
+* Finish blog app tutorial
+* Add a method for check missing links especially when we rename guides/pages
+* Improve our parser for not open in target=blank links like /foo/bar.
 * Add docs into admin ex in /admin/views/base/index.haml and in all sidebar
 * Extensions directory like railsplugins.org and http://coderack.org
 * Multi-language
