--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 = TODO
 
+* Create a clone repo on github
 * Change/populate our key features
 * Add a method for check missing links especially when we rename guides/pages
 * Extensions directory like railsplugins.org and http://coderack.org
