--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@
 * Add a method for check missing links especially when we rename guides/pages
 * Extensions directory like railsplugins.org and http://coderack.org
 * Multi-language
-* Padrino Book
+* Padrino Book with our guides and PD4ML
 
 = Done
 
