--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 = TODO
 
+* Add benchmarks some where (other than blog) with a good graphic
 * Create a clone repo on github
 * Change/populate our key features
 * Add a method for check missing links especially when we rename guides/pages
